eclipse 0.4b1 release